; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_tscs42xx.c_setup_sample_format.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_tscs42xx.c_setup_sample_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_component = type { i32 }

@RV_AIC1_WL_16 = common dso_local global i32 0, align 4
@RV_AIC1_WL_20 = common dso_local global i32 0, align 4
@RV_AIC1_WL_24 = common dso_local global i32 0, align 4
@RV_AIC1_WL_32 = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"Unsupported format width (%d)\0A\00", align 1
@R_AIC1 = common dso_local global i32 0, align 4
@RM_AIC1_WL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [33 x i8] c"Failed to set sample width (%d)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_component*, i32)* @setup_sample_format to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup_sample_format(%struct.snd_soc_component* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_soc_component*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.snd_soc_component* %0, %struct.snd_soc_component** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %17 [
    i32 131, label %9
    i32 130, label %11
    i32 129, label %13
    i32 128, label %15
  ]

9:                                                ; preds = %2
  %10 = load i32, i32* @RV_AIC1_WL_16, align 4
  store i32 %10, i32* %6, align 4
  br label %26

11:                                               ; preds = %2
  %12 = load i32, i32* @RV_AIC1_WL_20, align 4
  store i32 %12, i32* %6, align 4
  br label %26

13:                                               ; preds = %2
  %14 = load i32, i32* @RV_AIC1_WL_24, align 4
  store i32 %14, i32* %6, align 4
  br label %26

15:                                               ; preds = %2
  %16 = load i32, i32* @RV_AIC1_WL_32, align 4
  store i32 %16, i32* %6, align 4
  br label %26

17:                                               ; preds = %2
  %18 = load i32, i32* @EINVAL, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %7, align 4
  %20 = load %struct.snd_soc_component*, %struct.snd_soc_component** %4, align 8
  %21 = getelementptr inbounds %struct.snd_soc_component, %struct.snd_soc_component* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @dev_err(i32 %22, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %23)
  %25 = load i32, i32* %7, align 4
  store i32 %25, i32* %3, align 4
  br label %42

26:                                               ; preds = %15, %13, %11, %9
  %27 = load %struct.snd_soc_component*, %struct.snd_soc_component** %4, align 8
  %28 = load i32, i32* @R_AIC1, align 4
  %29 = load i32, i32* @RM_AIC1_WL, align 4
  %30 = load i32, i32* %6, align 4
  %31 = call i32 @snd_soc_component_update_bits(%struct.snd_soc_component* %27, i32 %28, i32 %29, i32 %30)
  store i32 %31, i32* %7, align 4
  %32 = load i32, i32* %7, align 4
  %33 = icmp slt i32 %32, 0
  br i1 %33, label %34, label %41

34:                                               ; preds = %26
  %35 = load %struct.snd_soc_component*, %struct.snd_soc_component** %4, align 8
  %36 = getelementptr inbounds %struct.snd_soc_component, %struct.snd_soc_component* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @dev_err(i32 %37, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i32 %38)
  %40 = load i32, i32* %7, align 4
  store i32 %40, i32* %3, align 4
  br label %42

41:                                               ; preds = %26
  store i32 0, i32* %3, align 4
  br label %42

42:                                               ; preds = %41, %34, %17
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i32 @dev_err(i32, i8*, i32) #1

declare dso_local i32 @snd_soc_component_update_bits(%struct.snd_soc_component*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
